# coding-template

./: .gitignore  .gitmodules  CUSTOMIZATION_GUIDE.md  Dockerfile  Dockerfile.hud  HUD_CLI_GUIDE.md  INSTRUCTIONS.md  QUICKSTART.md  README.md  SETUP.md  SETUP_GUIDE.md  START_HERE.md  TEMPLATE_SUMMARY.md  TEMPLATING_GUIDE.md  VERIFICATION_CHECKLIST.md  cli.py  env.py  imagectl4.py  local_test.py  pyproject.toml  remote_tasks.json  scenarios.py
.ck/: CUSTOMIZATION_GUIDE.md.ck  QUICKSTART.md.ck  README.md.ck  SETUP_GUIDE.md.ck  START_HERE.md.ck  TEMPLATE_SUMMARY.md.ck  TEMPLATING_GUIDE.md.ck  VERIFICATION_CHECKLIST.md.ck  manifest.json  pyproject.toml.ck
.ck/build_scripts/: alter_env_files.py.ck
.ck/dinit.d/: setup_postgres_data.sh.ck  setup_postgres_env.sh.ck
.ck/docker-entrypoint-initdb.d/: 01-init.sql.ck  init.sh.ck
.ck/src/hud_controller/: __init__.py.ck  app.py.ck  graders.py.ck  grading_runner.py.ck  (+4 more)
.ck/utils/: fmtprompt.py.ck  imagectl.py.ck
build_scripts/: alter_env_files.py  generate_all_patches.py
dinit.d/: fakes3  redis
dinit.d/boot.d/: fakes3
docker-entrypoint-initdb.d/: 01-init.sql  init.sh
environment/: __init__.py  computer.py  file_ops.py  graders.py  grading.py  server.py
grading/: __init__.py  constants.py  graders.py  runner.py  spec.py  utils.py
server/: main.py
server/problems/: basic_tasks.py  hard_tasks.py  medium_tasks.py
services/: __init__.py
src/hud_controller/: app.py  graders.py  setup.py  spec.py
tasks/: __init__.py  basic.py  hard.py  medium.py
tools/: __init__.py  editor.py
utils/: fmtprompt.py  imagectl.py
(+13 files in other folders)
